fix src, path: the one before is fix about href

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div>
 		
 			<div id="imglogo">
-				<a href=""><img src="/img/author.png" alt="&lt;h1&gt;My Coding Life&lt;/h1&gt;" title="&lt;h1&gt;My Coding Life&lt;/h1&gt;"/></a>
+				<a href=""><img src="img/author.png" alt="&lt;h1&gt;My Coding Life&lt;/h1&gt;" title="&lt;h1&gt;My Coding Life&lt;/h1&gt;"/></a>
 			</div>
 			
 			<div id="textlogo">
@@ -204,8 +204,8 @@ Markdown is a text-to-HTML conve</p>
 		</p>
 </div>
 </footer>
-    <!--<script src="/js/doSomething.js"></script>--> 
-<script src="/js/jquery-2.0.3.min.js"></script>
+    <!--<script src="js/doSomething.js"></script>--> 
+<script src="js/jquery-2.0.3.min.js"></script>
 
 <script type="text/javascript">
 $(document).ready(function(){ 
